@@ -3312,6 +3312,45 @@ An unknown event occurred.
 FILTERS
 Filters
 
+
+## SITREP_PRIORITY_ORDER is an ordered, whitespace separated list, prioritizing these sitreps to be
+## presented in the SitrepPanel in the order set below.  Sitreps not specified below will appear in
+## the SitrepPanel following those below.
+
+## ** DO NOT TRANSLATE the contents of SITREP_PRIORITY_ORDER  -- this is a functional entry
+SITREP_PRIORITY_ORDER
+'''SITREP_VICTORY
+SITREP_VICTORY_DESTRUCTION
+SITREP_VICTORY_CAPTURE
+SITREP_VICTORY_TECH
+SITREP_VICTORY_BIO
+SITREP_EMPIRE_ELIMINATED
+EFFECT_ANCIENT_SHIP
+EFFECT_ANCIENT_BUILDING
+EFFECT_ANCIENT_TECH
+SITREP_TECH_RESEARCHED
+SITREP_PLANET_CAPTURED
+SITREP_PLANET_COLONIZED
+SITREP_PLANET_BOMBARDED_AT_SYSTEM
+SITREP_UNOWNED_PLANET_BOMBARDED_AT_SYSTEM
+EFFECT_CONC_CAMP_COMLETE
+EFFECT_GAIAN_TERRAFORM
+EFFECT_TERRAFORM
+EFFECT_TAME_MONSTER_HATCHED
+EFFECT_TAME_MONSTER_MATURED
+SITREP_BUILDING_BUILT
+EFFECT_EXOBOT
+SITREP_SHIP_BUILT
+SITREP_SHIP_BATCH_BUILT
+EFFECT_EVACUEES
+EFFECT_PSY_DOM
+SITREP_OWN_FLEET_ARRIVED_AT_DESTINATION
+SITREP_FOREIGN_FLEET_ARRIVED_AT_DESTINATION
+SITREP_MONSTER_FLEET_ARRIVED_AT_DESTINATION
+SITREP_FLEET_ARRIVED_AT_DESTINATION'''
+## END OF SITREP_PRIORITY_ORDER
+
+
 SITREP_SHIP_BUILT
 The %shipdesign% '%ship%' has been produced at %system%.
 SITREP_SHIP_BUILT_LABEL
